Acabando la pagina Pefil

--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
     <main class="main">
-        <div class="mainperfiles">
+        <div class="containerPerfil">
             <div class="mainPefil">
                 <img src="../assets/img/happy-optimistic-handsome-latin-sales-manager-pointing-aside-and-looking-at-camera (1).jpg"
                     alt="">
@@ -56,7 +56,7 @@
                     <h2>Roger Natividad</h2>
                     <h3>Software Engineer - Web Developer</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, corporis.</p>
-                    <ul>
+                    <ul class="footerPerfil">
                         <li><a href="#" class="fa fa-facebook"></a></li>
                         <li><a href="#" class="fa fa-twitter"></a></li>
                         <li><a href="#" class="fa fa-linkedin"></a></li>
