--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid" data-aos="fade-right">
+        <nav class="navbar navbar-expand-lg p-0 bg-light" data-aos="fade-right">
+            <div class="container-fluid">
                 <img class="logo" src="./assets/img/LOGO GOODDOLLAR 4.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./pages/Registro.html">Registro</a>
