--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -17,8 +17,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid" data-aos="fade-right">
+        <nav class="navbar navbar-expand-lg p-0 bg-light"  data-aos="fade-right">
+            <div class="container-fluid">
                 <img class="logo" src="../assets/img/LOGO GOODDOLLAR 4.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -31,16 +31,17 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Registro.html">Registro</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/Registro.html">Registro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Perfil.html">Mi perfil</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/Perfil.html">Mi perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./contacto.html">¿Quienes somos?</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/contacto.html">¿Quienes
+                                somos?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Product_1.html">Producto</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/Product_1.html">Producto</a>
                         </li>
                     </ul>
                 </div>
@@ -50,13 +51,15 @@
     <main class="main">
         <div class="containerPerfil">
             <div class="mainPefil">
-                <img src="../assets/img/happy-optimistic-handsome-latin-sales-manager-pointing-aside-and-looking-at-camera (1).jpg"
-                    alt="">
+                <div>
+                    <img src="../assets/img/happy-optimistic-handsome-latin-sales-manager-pointing-aside-and-looking-at-camera (1) (1).jpg"
+                        alt="">
+                </div>
                 <section>
                     <h2>Roger Natividad</h2>
                     <h3>Software Engineer - Web Developer</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, corporis.</p>
-                    <ul class="footerPerfil">
+                    <ul>
                         <li><a href="#" class="fa fa-facebook"></a></li>
                         <li><a href="#" class="fa fa-twitter"></a></li>
                         <li><a href="#" class="fa fa-linkedin"></a></li>
