--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
 <body>
 
     <header>
-        <nav data-aos="fade-right" class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg p-0 bg-light" data-aos="fade-right">
             <div class="container-fluid">
                 <img class="logo" src="../assets/img/LOGO GOODDOLLAR 4.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,16 +31,17 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Registro.html">Registro</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/Registro.html">Registro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Perfil.html">Mi perfil</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/Perfil.html">Mi perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./contacto.html">¿Quienes somos?</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/contacto.html">¿Quienes
+                                somos?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Product_1.html">Producto</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/Product_1.html">Producto</a>
                         </li>
                     </ul>
                 </div>
