--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tercer Desafio</title>
+    <title>Tú perfil</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/597f0ffbfc.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg p-0 bg-light"  data-aos="fade-right">
+        <nav class="navbar navbar-expand-lg p-0 bg-light" data-aos="fade-right">
             <div class="container-fluid">
                 <img class="logo" src="../assets/img/LOGO GOODDOLLAR 4.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -49,6 +49,9 @@
         </nav>
     </header>
     <main class="main">
+        <p class="titulo">
+            Perfil
+        </p>
         <div class="containerPerfil">
             <div class="mainPefil">
                 <div>
