Agregando un primer map a los botones de producto

--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -51,9 +51,9 @@
     <main class="main">
         <div class="mainProducto">
             <div class="filtrosProductos">
-                <button type="reset">Limpiar Filtros</button>
-                <button type="reset">Filtrar</button>
-                <button type="reset">Favoritos</button>
+                <button class="btnPrincipal" type="reset">Limpiar Filtros</button>
+                <button class="btnPrincipal" type="reset">Filtrar</button>
+                <button class="btnPrincipal" type="reset">Favoritos</button>
             </div>
             <div class="targetaPrecio">
                 <h1>Super casa en oferta</h1>
