Agregando map de los titulos

--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
     <main class="main">
-        <p class="titulo">
+        <p class="tituloPrincipal">
             Perfil
         </p>
         <div class="containerPerfil">
