--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -56,7 +56,7 @@
                 <button class="btnPrincipal" type="reset">Favoritos</button>
             </div>
             <div class="targetaPrecio">
-                <h1>Super casa en oferta</h1>
+                <h1 class="tituloPrincipal">Super casa en oferta</h1>
                 <h2>Precio:100.000</h2>
                 <h3>Descripcion de la casa</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nemo magnam
