--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
     <main class="main">
         <div class="mainContacto">
             <div class="textoContacto">
-                <h1>¿Quienes somos?</h1>
+                <h1 class="tituloPrincipal">¿Quienes somos?</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit officia maxime mollitia provident
                     ea sed laborum iste optio explicabo, molestias, molestiae, sint veniam accusantium excepturi
                     inventore soluta quidem quaerat eos! ipsum dolor sit amet, consectetur adipiscing elit.
