--- a/pages/Registro.html
+++ b/pages/Registro.html
@@ -49,7 +49,7 @@
     </header>
     <main class="main">
         <div class="main__registro">
-            <h1>Registro</h1>
+            <h1 class="tituloPrincipal">Registro</h1>
             <div class="formularios">
                 <Form class="form" data-aos="zoom-out-down" action="">
                     <div class="form_1">
