--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <option value="fincas">Fincas</option>
                     </select>
                 </div>
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btnPrincipal" type="submit">Search</button>
             </div>
             <div class="aside_container">
                 <aside>
