Agregando detalles a la pagina, map, mixins

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main class="main">
         <div class="main__index">
-            <div class="filtros">
+            <div class="filtros textoFiltros">
                 <div class="filtro_1">
                     <h5 class="h5">Ordenar por precio</h5>
                     <select name="Ordenar" id="">
@@ -66,7 +66,7 @@
                         <option value="fincas">Fincas</option>
                     </select>
                 </div>
-                <button class="btnPrincipal" type="submit">Search</button>
+                <button class="btnPrincipal">Search</button>
             </div>
             <div class="aside_container">
                 <aside>
@@ -81,7 +81,7 @@
                         <a href="#">Ver más</a>
                     </div>
                 </aside>
-                <div class="container">
+                <div class="container textoParrafo">
                     <div class="targeta">
                         <figure><img src="./assets/img/Rectangle 24.png" alt=""></figure>
                         <h4>Titulo - descripción 1</h4>
