--- a/pages/Registro.html
+++ b/pages/Registro.html
@@ -105,7 +105,7 @@
                         <label for="aceptaTerminos"> Acepta Terminos y condiciones</label>
                         <input type="checkbox" name="aceptaTerminos" id="" value="acepto">
 
-                        <div class="registrarse"><button name="registrarse" id="">Registarse</button>
+                        <div class="registrarse"><button class="btnPrincipal" name="registrarse" id="">Registarse</button>
                         </div>
                     </div>
                 </Form>
