--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -15,12 +15,12 @@
 </head>
 
 <header>
-    <nav class="navbar navbar-expand-lg p-0 bg-light"  data-aos="fade-right">
+    <nav class="navbar navbar-expand-lg p-0 bg-light" data-aos="fade-right">
         <div class="container-fluid">
             <img class="logo" src="../assets/img/LOGO GOODDOLLAR 4.png" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -55,34 +55,54 @@
                 <button class="btnPrincipal" type="reset">Filtrar</button>
                 <button class="btnPrincipal" type="reset">Favoritos</button>
             </div>
-            <div class="targetaPrecio">
-                <h1 class="tituloPrincipal">Super casa en oferta</h1>
-                <h2>Precio:100.000</h2>
-                <h3>Descripcion de la casa</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nemo magnam
-                    eveniet
-                    atque, quisquam voluptate necessitatibus !</p>
-                <img class="producto1__img1" src="../assets/img/Rectangle 24.png" alt="">
-            </div>
-            <div class="productos">
-                <div class="producto_2">
-                    <h4>Super casa en oferta 2</h4>
-                    <button><img class="producto2__img" src="../assets/img/Rectangle 25.png" alt=""></button>
-                    <div class="producto_3">
-                        <h4>Super casa en oferta 3</h4>
-                        <button><img class="producto3__img" src="./assets/img/Rectangle 25.png" alt=""></button>
-                    </div>
+            <div class="targetasProductos">
+                <div class="aside">
+                    <aside>
+                        <h3>Noticias</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
+                            necessitatibus
+                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
+                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
+                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
+                            numquam ratione quisquam nostrum quaerat delectu</p>
+                        <a href="#">Ver más</a>
+                    </aside>
+                </div>
+                <div class="targetaPrecio">
                     <div>
-                        <h4>Super casa en oferta 4</h4>
-                        <button><img class="producto4__img" src="../assets/img/Rectangle 25.png" alt=""></button>
+                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
+                        <img class="producto1__img1" src="../assets/img/Rectangle 24.png" alt="">
                     </div>
-                    <div class="producto_5">
-                        <h4 class="producto5__titulo">Super casa en oferta 5</h4>
-                        <button><img class="producto5__img" src="../assets/img/Rectangle 25.png" alt=""></button>
+                    <h2>Precio:100.000</h2>
+                    <div>
+                        <h3>Descripcion de la casa</h3>
+                        <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nemo magnam
+                            eveniet
+                            atque, quisquam voluptate necessitatibus !</p>
                     </div>
-                    <div class="producto_6">
-                        <h4 class="producto6__titulo">Super casa en oferta 6</h4>
-                        <button><img class="producto6__img" src="../assets/img/Rectangle 25.png" alt=""></button>
+                </div>
+                <div class="containerProductos">
+                    <div class="productosSugeridos">
+                        <div class="producto2">
+                            <h4>Super casa en oferta 2</h4>
+                            <img src="../assets/img/Rectangle 25.png" alt="">
+                        </div>
+                        <div class="producto3">
+                            <h4>Super casa en oferta 3</h4>
+                            <img src="../assets/img/Rectangle 25.png" alt="">
+                        </div>
+                        <div class="producto4">
+                            <h4>Super casa en oferta 4</h4>
+                            <img src="../assets/img/Rectangle 25.png" alt="">
+                        </div>
+                        <div class="producto5">
+                            <h4 class="producto5__titulo">Super casa en oferta 5</h4>
+                            <img src="../assets/img/Rectangle 25.png" alt="">
+                        </div>
+                        <div class="targetaProducto6">
+                            <h4 class="producto6__titulo">Super casa en oferta 6</h4>
+                            <img src="../assets/img/Rectangle 25.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
