--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -55,57 +55,65 @@
                 <button class="btnPrincipal" type="reset">Filtrar</button>
                 <button class="btnPrincipal" type="reset">Favoritos</button>
             </div>
-            <div class="targetasProductos">
-                <div class="aside">
-                    <aside>
-                        <h3>Noticias</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
-                            necessitatibus
-                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
-                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
-                            numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
-                            numquam ratione quisquam nostrum quaerat delectu</p>
-                        <a href="#">Ver más</a>
-                    </aside>
-                </div>
-                <div class="targetaPrecio">
-                    <div>
-                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
-                        <img class="producto1__img1" src="../assets/img/Rectangle 24.png" alt="">
-                    </div>
-                    <h2>Precio:100.000</h2>
-                    <div>
+            <div class="targetaPrecio">
+                <div class="targetaPrecio__container">
+                    <h1 class="tituloPrincipal">Super casa en oferta</h1>
+                    <img src="../assets/img/Rectangle 24.png" alt="">
+                    <div class="targetaPrecio__container">
+                        <h2>Precio:100.000</h2>
                         <h3>Descripcion de la casa</h3>
                         <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nemo magnam
                             eveniet
-                            atque, quisquam voluptate necessitatibus !</p>
-                    </div>
-                </div>
-                <div class="containerProductos">
-                    <div class="productosSugeridos">
-                        <div class="producto2">
-                            <h4>Super casa en oferta 2</h4>
-                            <img src="../assets/img/Rectangle 25.png" alt="">
-                        </div>
-                        <div class="producto3">
-                            <h4>Super casa en oferta 3</h4>
-                            <img src="../assets/img/Rectangle 25.png" alt="">
-                        </div>
-                        <div class="producto4">
-                            <h4>Super casa en oferta 4</h4>
-                            <img src="../assets/img/Rectangle 25.png" alt="">
-                        </div>
-                        <div class="producto5">
-                            <h4 class="producto5__titulo">Super casa en oferta 5</h4>
-                            <img src="../assets/img/Rectangle 25.png" alt="">
-                        </div>
-                        <div class="targetaProducto6">
-                            <h4 class="producto6__titulo">Super casa en oferta 6</h4>
-                            <img src="../assets/img/Rectangle 25.png" alt="">
-                        </div>
+                            atque, quisquam voluptate necessitatibus !
+                        </p>
                     </div>
                 </div>
             </div>
+            <div class="asideProducto">
+                <aside>
+                    <h3>Noticias</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
+                        necessitatibus
+                        numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
+                    </p>
+                    <a href="#">Ver más</a>
+                </aside>
+            </div>
+            <div class="targetasProductos">
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 2</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 3</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 4</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 5</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 6</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 7</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 8</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+                <div class="targetaProducto">
+                    <h4>Super casa en oferta 9</h4>
+                    <img src="../assets/img/Rectangle 25.png" alt="">
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
