Agregando nuevas imagenes y ajustando la pagina Producto

--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -55,62 +55,84 @@
                 <button class="btnPrincipal" type="reset">Filtrar</button>
                 <button class="btnPrincipal" type="reset">Favoritos</button>
             </div>
-            <div class="targetaPrecio">
-                <div class="targetaPrecio__container">
-                    <h1 class="tituloPrincipal">Super casa en oferta</h1>
-                    <img src="../assets/img/Rectangle 24.png" alt="">
-                    <div class="targetaPrecio__container">
-                        <h2>Precio:100.000</h2>
-                        <h3>Descripcion de la casa</h3>
-                        <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nemo magnam
-                            eveniet
-                            atque, quisquam voluptate necessitatibus !
-                        </p>
-                    </div>
-                </div>
-            </div>
             <div class="asideProducto">
                 <aside>
                     <h3>Noticias</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
                         necessitatibus
-                        numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad solitatibus
+                        numquam ratione quisquam nostrum quaerat delectus incidunt illum consectetur ad
+                        solitatibus
                     </p>
                     <a href="#">Ver más</a>
                 </aside>
             </div>
+            <div class="targetaPrecioContainer">
+                <div class="targetaPrecio  justify-content-center">
+                    <div class="preciocontainer">
+                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
+                    <h2>Precio:100.000</h2>
+                    <h3>Descripcion de la casa</h3>
+                    <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
+                        laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
+                        omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem ipsum dolor sit
+                        amet consectetur adipisicing elit. Rem nemo magnam
+                        eveniet
+                        atque, quisquam voluptate necessitatibus !
+                    </p>
+                    </div>
+                    <div class="carruselcontainer">
+                        <div class="carruselPrecio">
+                            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="targetasProductos">
                 <div class="targetaProducto">
                     <h4>Super casa en oferta 2</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
+                    <img src="../assets/img/casa (4).jpg" alt="">
                 </div>
                 <div class="targetaProducto">
                     <h4>Super casa en oferta 3</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
+                    <img src="../assets/img/casa (5).jpg" alt="">
                 </div>
                 <div class="targetaProducto">
                     <h4>Super casa en oferta 4</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
+                    <img src="../assets/img/casa (7).jpg" alt="">
                 </div>
                 <div class="targetaProducto">
                     <h4>Super casa en oferta 5</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
+                    <img src="../assets/img/casa (8).jpg" alt="">
                 </div>
                 <div class="targetaProducto">
                     <h4>Super casa en oferta 6</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
+                    <img src="../assets/img/casa (9).jpg" alt="">
                 </div>
                 <div class="targetaProducto">
                     <h4>Super casa en oferta 7</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
-                </div>
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 8</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
-                </div>
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 9</h4>
-                    <img src="../assets/img/Rectangle 25.png" alt="">
+                    <img src="../assets/img/casa (10).jpg" alt="">
                 </div>
             </div>
         </div>
