--- a/index.html
+++ b/index.html
@@ -83,42 +83,42 @@
                 </aside>
                 <div class="container textoParrafo">
                     <div class="targeta">
-                        <figure><img src="./assets/img/Rectangle 24.png" alt=""></figure>
+                        <figure><img src="../assets/img/casa (1).jpg" alt=""></figure>
                         <h4>Titulo - descripción 1</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         <a href="./Product_1.html">Ver más</a>
                     </div>
 
                     <div class="targeta">
-                        <figure><img src="./assets/img/Rectangle 23.png" alt=""></figure>
+                        <figure><img src="../assets/img/casa (2).jpg" alt=""></figure>
                         <h4>Titulo - descripción 2</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         <a href="#">Ver más</a>
                     </div>
 
                     <div class="targeta">
-                        <figure><img src="./assets/img/Rectangle 23.png" alt=""></figure>
+                        <figure><img src="../assets/img/casa (3).jpg" alt=""></figure>
                         <h4>Titulo - descripción 3</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         <a href="#">Ver más</a>
                     </div>
 
                     <div class="targeta">
-                        <figure><img src="./assets/img/Rectangle 23.png" alt=""></figure>
+                        <figure><img src="../assets/img/casa (4).jpg" alt=""></figure>
                         <h4>Titulo - descripción 4</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         <a href="#">Ver más</a>
                     </div>
 
                     <div class="targeta">
-                        <figure><img src="./assets/img/Rectangle 23.png" alt=""></figure>
+                        <figure><img src="../assets/img/casa (5).jpg" alt=""></figure>
                         <h4>Titulo - descripción 5</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         <a href="#">Ver más</a>
                     </div>
 
                     <div class="targeta">
-                        <figure><img src="./assets/img/Rectangle 23.png" alt=""></figure>
+                        <figure><img src="../assets/img/casa (6).jpg" alt=""></figure>
                         <h4>Titulo - descripción 6</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         <a href="#">Ver más</a>
