organizando el first mobile de productos1

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 </div>
                 <button class="btnPrincipal">Search</button>
             </div>
-            <div class="aside_container">
-                <aside>
-                    <div class="aside">
+            <div class="section_container">
+                <section>
+                    <div class="section">
                         <h3>Noticias</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
                             necessitatibus
@@ -80,7 +80,7 @@
                             numquam ratione quisquam nostrum quaerat delectu</p>
                         <a href="#">Ver más</a>
                     </div>
-                </aside>
+                </section>
                 <div class="container textoParrafo">
                     <div class="targeta">
                         <figure><img src="../assets/img/casa (1).jpg" alt=""></figure>
