--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -55,8 +55,8 @@
                 <button class="btnPrincipal" type="reset">Filtrar</button>
                 <button class="btnPrincipal" type="reset">Favoritos</button>
             </div>
-            <div class="asideProducto">
-                <aside>
+            <div class="sectionProducto">
+                <section>
                     <h3>Noticias</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic quidem placeat atque
                         necessitatibus
@@ -64,48 +64,47 @@
                         solitatibus
                     </p>
                     <a href="#">Ver más</a>
-                </aside>
+                </section>
             </div>
-            <div class="targetaPrecioContainer">
-                <div class="targetaPrecio  justify-content-center">
-                    <div class="preciocontainer">
-                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
-                    <h2>Precio:100.000</h2>
-                    <h3>Descripcion de la casa</h3>
-                    <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
-                        laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
-                        omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem ipsum dolor sit
-                        amet consectetur adipisicing elit. Rem nemo magnam
-                        eveniet
-                        atque, quisquam voluptate necessitatibus !
-                    </p>
-                    </div>
-                    <div class="carruselcontainer">
-                        <div class="carruselPrecio">
-                            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
-                                    </div>
-                                </div>
-                                <button class="carousel-control-prev" type="button"
-                                    data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-                                <button class="carousel-control-next" type="button"
-                                    data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
+            <div class="targetasPrecioContainer container-fluid d-flex justify-content-center p-0">
+                <div class="carruselPrecio">
+                    <div id="carouselExampleControls" class="carousel slide align-content-center"
+                        data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
                             </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="targetaPrecio">
+                    <div class="textoPrecio">
+                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
+                        <h2>Precio:100.000</h2>
+                        <h3>Descripcion de la casa</h3>
+                        <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
+                            laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
+                            omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem ipsum dolor sit
+                            amet consectetur adipisicing elit. Rem nemo magnam
+                            eveniet
+                            atque, quisquam voluptate necessitatibus !
+                        </p>
                     </div>
                 </div>
             </div>
