--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -68,13 +68,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../assets/img/Rectangle 23.png" class="d-block w-100" alt="...">
+                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/img/Rectangle 24.png" class="d-block w-100" alt="...">
+                                <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/img/Rectangle 25.png" class="d-block w-100" alt="...">
+                                <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
