Agregando grid a productos

--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -66,72 +66,102 @@
                     <a href="#">Ver más</a>
                 </section>
             </div>
-            <div class="targetasPrecioContainer container-fluid d-flex justify-content-center p-0">
-                <div class="carruselPrecio">
-                    <div id="carouselExampleControls" class="carousel slide align-content-center"
-                        data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
+            <div class="containerPrecio">
+                <div class="targetaPrecioContainer container-fluid d-flex justify-content-center p-0">
+                    <div class="carruselPrecio">
+                        <div id="carouselExampleControls" class="carousel slide align-content-center"
+                            data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
+                                </div>
                             </div>
-                            <div class="carousel-item">
-                                <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
-                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
                     </div>
-                </div>
-                <div class="targetaPrecio">
-                    <div class="textoPrecio">
-                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
-                        <h2>Precio:100.000</h2>
-                        <h3>Descripcion de la casa</h3>
-                        <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
-                            laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
-                            omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem ipsum dolor sit
-                            amet consectetur adipisicing elit. Rem nemo magnam
-                            eveniet
-                            atque, quisquam voluptate necessitatibus !
-                        </p>
+                    <div class="targetaPrecio">
+                        <div class="textoPrecio">
+                            <h1 class="tituloPrincipal">Super casa en oferta</h1>
+                            <h2>Precio:100.000</h2>
+                            <h3>Descripcion de la casa</h3>
+                            <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
+                                laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
+                                omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem 
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="targetasProductos">
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 2</h4>
-                    <img src="../assets/img/casa (4).jpg" alt="">
+            
+            <div class="targetasProductosGrid justify-content-evenly">
+                <div class="card" style="width: 18rem;">
+                    <img src="../assets/img/casa (4).jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 3</h4>
-                    <img src="../assets/img/casa (5).jpg" alt="">
+                <div class="card" style="width: 18rem;">
+                    <img src="../assets/img/casa (5).jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 4</h4>
-                    <img src="../assets/img/casa (7).jpg" alt="">
+                <div class="card" style="width: 18rem;">
+                    <img src="../assets/img/casa (6).jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 5</h4>
-                    <img src="../assets/img/casa (8).jpg" alt="">
+                <div class="card" style="width: 18rem;">
+                    <img src="../assets/img/casa (7).jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 6</h4>
-                    <img src="../assets/img/casa (9).jpg" alt="">
+                <div class="card" style="width: 18rem;">
+                    <img src="../assets/img/casa (8).jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-                <div class="targetaProducto">
-                    <h4>Super casa en oferta 7</h4>
-                    <img src="../assets/img/casa (10).jpg" alt="">
+                <div class="card" style="width: 18rem;">
+                    <img src="../assets/img/casa (9).jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
             </div>
         </div>
