--- a/pages/Product_1.html
+++ b/pages/Product_1.html
@@ -66,48 +66,46 @@
                     <a href="#">Ver más</a>
                 </section>
             </div>
-            <div class="containerPrecio">
-                <div class="targetaPrecioContainer container-fluid d-flex justify-content-center p-0">
-                    <div class="carruselPrecio">
-                        <div id="carouselExampleControls" class="carousel slide align-content-center"
-                            data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
-                                </div>
+            <div class="targetaPrecioContainer container-fluid d-flex justify-content-center p-0">
+                <div class="carruselPrecio">
+                    <div id="carouselExampleControls" class="carousel slide align-content-center"
+                        data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../assets/img/casa (1).jpg" class="d-block w-100" alt="">
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+                            <div class="carousel-item">
+                                <img src="../assets/img/casa (2).jpg" class="d-block w-100" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/casa (3).jpg" class="d-block w-100" alt="">
+                            </div>
                         </div>
+                        <button class="carousel-control-prev bg-dark" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next bg-dark" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="targetaPrecio">
-                        <div class="textoPrecio">
-                            <h1 class="tituloPrincipal">Super casa en oferta</h1>
-                            <h2>Precio:100.000</h2>
-                            <h3>Descripcion de la casa</h3>
-                            <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
-                                laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
-                                omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem 
-                            </p>
-                        </div>
+                </div>
+                <div class="targetaPrecio">
+                    <div class="textoPrecio">
+                        <h1 class="tituloPrincipal">Super casa en oferta</h1>
+                        <h2>Precio: $100.000</h2>
+                        <h3>Descripción de la casa</h3>
+                        <p class="textoParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque sit,
+                            laboriosam alias illo corporis nihil asperiores eveniet? Quod corporis pariatur, fugiat
+                            omnis asperiores neque veniam vero, laudantium debitis ipsa nihil. Lorem
+                        </p>
                     </div>
                 </div>
             </div>
-            
+
             <div class="targetasProductosGrid justify-content-evenly">
                 <div class="card" style="width: 18rem;">
                     <img src="../assets/img/casa (4).jpg" class="card-img-top" alt="">
